diff js files for form and etc

--- a/diseases.html
+++ b/diseases.html
@@ -9,6 +9,7 @@
     <script src="scrollAnimation.js"></script>
     <script src="burger.js"></script>
     <script src="functions.js"></script>
+    <script src="backtotop.js"></script>
     <link rel="stylesheet" href="burger.css">
     <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
     <link rel="stylesheet" href="Liana_style.css">
