--- a/doctors.html
+++ b/doctors.html
@@ -12,6 +12,7 @@
     <script src="burger.js"></script>
     <link rel="stylesheet" href="burger.css">
     <script src="functions.js"></script>
+    <script src="backtotop.js"></script>
     <title>Densauluq</title>
 </head>
 
