--- a/recommend.html
+++ b/recommend.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
   <script src="burger.js"></script>
   <script src="functions.js"></script>
+  <script src="backtotop.js"></script>
   <link rel="stylesheet" href="burger.css">
   <script src="scrollAnimation.js"></script>
   <!--  <link rel="stylesheet" href="Liana_style.css">-->
