--- a/registration.html
+++ b/registration.html
@@ -10,6 +10,7 @@
     <script src="scrollAnimation.js"></script>
     <script src="burger.js"></script>
     <script src="functions.js"></script>
+    <script src="backtotop.js"></script>
     <link rel="stylesheet" href="burger.css">
     <title>Log in/Sign up - Densaulyq</title>
 </head>
