--- a/analysis.html
+++ b/analysis.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="burger.js"></script>
     <script src="functions.js"></script>
+    <script src="backtotop.js"></script>
     <link rel="stylesheet" href="burger.css">
     <title>Health analysis - Densauluq</title>
 </head>
