--- a/home_page.html
+++ b/home_page.html
@@ -7,6 +7,7 @@
     <script src="darkMode.js"></script>
     <script src="burger.js"></script>
     <script src="functions.js"></script>
+    <script src="backtotop.js"></script>
     <link rel="stylesheet" href="burger.css">
     <script src="scrollAnimation.js"></script>
 <!--    <script src="searchBar.js"></script>-->
