--- a/appointment.html
+++ b/appointment.html
@@ -12,6 +12,7 @@
     <script src="validation.js"></script>
     <script src="burger.js"></script>
     <script src="functions.js"></script>
+    <link rel="stylesheet" href="newchat.css">
     <script src="backtotop.js"></script>
     <link rel="stylesheet" href="burger.css">
     <title>Appointment - Densaulyq</title>
@@ -93,4 +94,6 @@
 </footer>
 
 </body>
+<script src="newChat.js"></script>
+
 </html>
