--- a/home_page.html
+++ b/home_page.html
@@ -10,7 +10,8 @@
     <script src="backtotop.js"></script>
     <link rel="stylesheet" href="burger.css">
     <script src="scrollAnimation.js"></script>
-<!--    <script src="searchBar.js"></script>-->
+    <link rel="stylesheet" href="newchat.css">
+    <!--    <script src="searchBar.js"></script>-->
     <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
 <!--    <link rel="stylesheet" href="Liana_style.css">-->
     <title>Densaulyq</title>
@@ -100,6 +101,26 @@
     </section>
 </div>
 
+<!--<button id="toggle-chatbot"></button>-->
+<!--<div class="chatbot" id="chatbot-container">-->
+<!--    <div class="chatbox" id="chatbox"></div>-->
+<!--    <div class="input-container">-->
+<!--        <input type="text" id="userinput" placeholder="Type your query here">-->
+<!--        <button onclick="sendMessage()">Send</button>-->
+<!--        <button onclick="closeChatbot()">Close</button>-->
+<!--    </div>-->
+<!--</div>-->
+
+<!--<div class="chatbot-container collapsed" id="chatbot-container" onclick="toggleChat()">-->
+<!--    <button class="close-button" onclick="closeChat(event)">×</button> &lt;!&ndash; Close button &ndash;&gt;-->
+<!--    <div class="chatbot-messages" id="chatbot-messages"></div>-->
+<!--    <div class="chat-input">-->
+<!--        <input type="text" id="user-input" placeholder="Ask about a medicine..." />-->
+<!--        <button class="send-button" onclick="sendMessage(event)">Send</button>-->
+<!--    </div>-->
+<!--</div>-->
+
+
 <footer class="bg-dark text-light text-center py-3 mt-auto">
     <p>2024 Densauluq. Gaziza Tanirbergen, Liana Smatulla, Kuanysh Aitzhanov.</p>
 </footer>
@@ -110,4 +131,6 @@
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d320668.45270979754!2d71.50158234999999!3d51.1043588!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x424585a605525605%3A0x4dff4a1973f7567e!2sAstana%20IT%20University!5e0!3m2!1sru!2skz!4v1725451090787!5m2!1sru!2skz" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
 </body>
+<script src="newChat.js"></script>
+
 </html>
