--- a/personal_account.html
+++ b/personal_account.html
@@ -8,6 +8,7 @@
   <script src="burger.js"></script>
   <script src="functions.js"></script>
   <link rel="stylesheet" href="burger.css">
+  <link rel="stylesheet" href="newchat.css">
   <script src="scrollAnimation.js"></script>
   <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
   <title>Personal Account - Densauluq</title>
@@ -113,5 +114,6 @@
   <p>2024 Densauluq. Gaziza Tanirbergen, Liana Smatulla, Kuanysh Aitzhanov.</p>
 </footer>
 </body>
+<script src="newChat.js"></script>
 
 </html>
