--- a/diseases.html
+++ b/diseases.html
@@ -9,6 +9,7 @@
     <script src="scrollAnimation.js"></script>
     <script src="burger.js"></script>
     <script src="functions.js"></script>
+    <link rel="stylesheet" href="newchat.css">
     <script src="backtotop.js"></script>
     <link rel="stylesheet" href="burger.css">
     <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
@@ -192,4 +193,6 @@
 </footer>
 
 </body>
+<script src="newChat.js"></script>
+
 </html>
