--- a/doctors.html
+++ b/doctors.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="Liana_style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <script src="burger.js"></script>
+    <link rel="stylesheet" href="newchat.css">
     <link rel="stylesheet" href="burger.css">
     <script src="functions.js"></script>
     <script src="backtotop.js"></script>
@@ -80,4 +81,6 @@
     <p>2024 Densauluq. Gaziza Tanirbergen, Liana Smatulla, Kuanysh Aitzhanov.</p>
 </footer>
 </body>
+<script src="newChat.js"></script>
+
 </html>
