--- a/funding.html
+++ b/funding.html
@@ -13,6 +13,7 @@
     <script src="backtotop.js"></script>
     <script src="form_valid.js"></script>
     <link rel="stylesheet" href="burger.css">
+    <link rel="stylesheet" href="newchat.css">
     <script src="scrollAnimation.js"></script>
     <title>Densauluq</title>
 
@@ -124,4 +125,6 @@
 
 
 </body>
+<script src="newChat.js"></script>
+
 </html>
