--- a/recommend.html
+++ b/recommend.html
@@ -9,6 +9,7 @@
   <script src="functions.js"></script>
   <script src="backtotop.js"></script>
   <link rel="stylesheet" href="burger.css">
+  <link rel="stylesheet" href="newchat.css">
   <script src="scrollAnimation.js"></script>
   <!--  <link rel="stylesheet" href="Liana_style.css">-->
   <title>General Recommendations - Densauluq</title>
@@ -96,4 +97,6 @@
 </div>
 
 </body>
+<script src="newChat.js"></script>
+
 </html>
