--- a/registration.html
+++ b/registration.html
@@ -10,6 +10,8 @@
     <script src="scrollAnimation.js"></script>
     <script src="burger.js"></script>
     <script src="functions.js"></script>
+    <script src="validation.js"></script>
+    <link rel="stylesheet" href="newchat.css">
     <script src="backtotop.js"></script>
     <link rel="stylesheet" href="burger.css">
     <title>Log in/Sign up - Densaulyq</title>
@@ -111,4 +113,6 @@
 </script>
 
 </body>
+<script src="newChat.js"></script>
+
 </html>
