added form valid for login part + local storage and small fixes on validation file

--- a/registration.html
+++ b/registration.html
@@ -10,6 +10,7 @@
     <script src="scrollAnimation.js"></script>
     <script src="burger.js"></script>
     <script src="validation.js"></script>
+    <script src="loginForm.js"></script>
     <link rel="stylesheet" href="newchat.css">
     <script src="backtotop.js"></script>
     <link rel="stylesheet" href="burger.css">
